--- a/openGL/openGL.vcxproj
+++ b/openGL/openGL.vcxproj
@@ -145,15 +145,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\helloTriangle.cpp" />
+    <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\models.cpp" />
+    <ClCompile Include="src\stb_image_imp.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="fragment.glsl" />
-    <None Include="vertex.glsl" />
+    <None Include="glitchTransformFrag.glsl" />
+    <None Include="glitchTransformVertex.glsl" />
+    <None Include="toonFrag.glsl" />
+    <None Include="toonVertex.glsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\models.h" />
+    <ClInclude Include="src\stb_image.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
