--- a/openGL/openGL.vcxproj
+++ b/openGL/openGL.vcxproj
@@ -163,6 +163,10 @@
     <ClInclude Include="src\models.h" />
     <ClInclude Include="src\stb_image.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="Rin_(Native).obj" />
+    <Object Include="rock eli.obj" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
