--- a/openGL/openGL.vcxproj.filters
+++ b/openGL/openGL.vcxproj.filters
@@ -43,4 +43,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="Rin_(Native).obj" />
+    <Object Include="rock eli.obj" />
+  </ItemGroup>
 </Project>
